<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activity.MasterDetail">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/master_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:textAlignment="center"
                android:textSize="30sp" android:textColor="@android:color/black"/>
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/id"
                        android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_weight="0"
                        android:textSize="18sp" android:layout_width="0dp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" android:id="@+id/user_id" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/username"
                        android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="0"
                        android:textSize="18sp" android:layout_width="wrap_content"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_title" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_email" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"
                        android:textStyle="bold"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_street" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/suite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView23" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_suite" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_city" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/zipcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_zip_code" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <Button
                        android:text="@string/locate"
                        android:layout_width="186dp"
                        android:layout_height="wrap_content" android:id="@+id/user_locate_button"
                        android:layout_weight="1"
                        android:onClick="locateButtonClick"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView12" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_phone" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/website"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView14" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_website" android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/textView16"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"
                        android:textStyle="bold"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView17" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_company_name"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/company_catchphrase"
                        android:layout_height="wrap_content" android:id="@+id/textView19" android:layout_weight="0"
                        android:textSize="18sp" android:layout_width="wrap_content"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_company_catchphrase"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/company_business"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView21" android:layout_weight="0"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/user_company_business"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="@drawable/table_background"
                        android:textColor="#000000"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>