<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:clipToPadding="false" android:id="@+id/signup_scrollview">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <Button
                    android:text="@string/submit"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_button"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
                    app:layout_constraintTop_toBottomOf="@+id/signup_country_list" android:layout_marginTop="32dp"
                    android:onClick="submitButtonClick"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:id="@+id/signup_password_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password_textview"
                    android:importantForAutofill="no"
                    android:hint="@string/signup_password_hint"
                    android:maxLength="10" android:inputType="textPassword"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:id="@+id/confirm_password_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_textview"
                    android:importantForAutofill="no" android:inputType="textPassword"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:text="@string/user_name" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"
                    android:id="@+id/signup_username_textview"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="218dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/signup_user_name_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/signup_username_textview"
                    android:layout_marginTop="8dp"
                    android:importantForAutofill="no"
                    android:hint="@string/signup_username_hint"
                    android:maxLength="15"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/signup_country_list" android:spinnerMode="dropdown"
                    android:entries="@array/countries_list"
                    app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="44dp"
                    android:layout_marginEnd="36dp"
                    android:background="@android:drawable/btn_dropdown"
                    app:layout_constraintTop_toBottomOf="@+id/signup_country_textview" android:layout_marginTop="8dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/signup_password_textview" android:text="@string/password"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/signup_user_name_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/confirm_password_textview" android:text="@string/confirm_password"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/signup_password_input"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:id="@+id/signup_country_textview" android:text="@string/country"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="36dp"
                    app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/signup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/signup_title_texview" android:textSize="30sp" android:fontFamily="monospace"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="113dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="82dp"
                    app:layout_constraintBottom_toTopOf="@+id/signup_user_name_input"
                    app:layout_constraintVertical_bias="0.0"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>